<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DadosPessoais"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nome_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/digite_seu_nome"
        />

    <EditText
        android:id="@+id/nome_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:inputType="text"
        />


    <TextView
        android:id="@+id/idade_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/digite_sua_idade"
        />

    <EditText
        android:id="@+id/idade_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/idade"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/sexo_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecione_seu_sexo"
        />

    <RadioGroup
        android:id="@+id/sexo_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/masculino_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            android:layout_weight="1"
            />

        <RadioButton
            android:id="@+id/feminino_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/feminino"
            />
    </RadioGroup>


    <TextView
        android:id="@+id/altura_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coloque_sua_altura"
        />
    <EditText
        android:id="@+id/altura_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/altura"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/peso_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coloque_seu_peso"
        />

    <EditText
        android:id="@+id/peso_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/peso"
        android:inputType="numberDecimal" />


    <TextView
        android:id="@+id/nivel_atividade_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nivel_de_atividade"
        />

    <Spinner
        android:id="@+id/nivel_atividade_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/atividade"
        />

    <Button
        android:id="@+id/enviar_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enviar"
        />
</LinearLayout>