<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/apresentacao_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apresentacao_tv"
        android:textSize="24sp"
        android:textAlignment="center"
        />
    <Button
        android:id="@+id/apresentacao_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apresentacao_bt"
        android:textSize="30sp"
        android:layout_marginTop="20sp"/>

    <Button
        android:id="@+id/historico_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_hist_rico"
        android:textSize="30sp"
        android:layout_marginTop="20sp"/>

</LinearLayout>