<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResumoSaude"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/resultadoFinal_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado_final"
        android:textSize="25sp"
        />

    <Button
        android:id="@+id/voltar_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        android:layout_marginTop="30dp"
        android:textSize="30sp" />

    <Button
        android:id="@+id/voltar_menu_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voltar_para_o_menu"
        android:layout_marginTop="10dp"
        android:textSize="30sp" />
</LinearLayout>